2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* findprog.h: New file.
	* findprog.c: New file.
	* full-write.h: New file.
	* full-write.c: New file.
	* pipe.h: New file.
	* pipe-bidi.c: New file.
	* pipe-in.c: New file.
	* pipe-out.c: New file.
	* safe-read.h: New file.
	* safe-read.c: New file.
	* wait-process.h: New file.
	* wait-process.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add findprog.c, full-write.c,
	pipe-bidi.c, pipe-in.c, pipe-out.c, safe-read.c, wait-process.c.
	(noinst_HEADERS): Add findprog.h, full-write.h, pipe.h, safe-read.h,
	wait-process.h.

2001-05-15  Bruno Haible  <haible@clisp.cons.org>

	* progname.h (set_program_name): New declaration.
	* progname.c: Include <string.h>.
	(set_program_name): New function.

2001-05-02  Bruno Haible  <haible@clisp.cons.org>

	* xerror.h: New file.
	* xerror.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add xerror.c.
	(noinst_HEADERS): Add xerror.h.

2001-05-01  Bruno Haible  <haible@clisp.cons.org>

	Prefix most error messages with the program name, except those
	starting with "filename:lineno:".
	* progname.h: New file.
	* progname.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add progname.c.
	(noinst_HEADERS): Add progname.h.

2001-05-01  Bruno Haible  <haible@clisp.cons.org>

	* vasprintf.c (int_vasprintf): Upon allocation failure, return -1,
	not 0, to be consistent with glibc documentation.

2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	Silence "gcc -Wall -Wwrite-strings" warnings.
	* localcharset.c (charset_aliases): Change type to 'const char *'.
	(get_charset_aliases): Change type of 'cp' to 'const char *'.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.c (mbs_possible_linebreaks): Avoid broken EUC-KR
	conversion in glibc-2.1.
	(mbs_width_linebreaks): Likewise.

2001-05-02  Bruno Haible  <haible@clisp.cons.org>
