@@ -1,4 +1,4 @@
-#serial 4
+#serial 5
 
 dnl autoconf tests required for use of mbswidth.c
 dnl From Bruno Haible.
@@ -7,7 +7,7 @@ AC_DEFUN(jm_PREREQ_MBSWIDTH,
 [
   AC_REQUIRE([AC_HEADER_STDC])
   AC_CHECK_HEADERS(limits.h stdlib.h string.h wchar.h wctype.h)
-  AC_CHECK_FUNCS(isascii iswcntrl iswprint wcwidth)
+  AC_CHECK_FUNCS(isascii iswcntrl iswprint mbsinit wcwidth)
   jm_FUNC_MBRTOWC
 
   AC_CACHE_CHECK([whether wcwidth is declared], ac_cv_have_decl_wcwidth,
