@@ -1,3 +1,7 @@
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* mbswidth.m4: Also check for mbsinit. Needed for SCO 3.2v5.0.2.
+
 2001-06-14  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_WITH_NLS): Add support for autoconf-2.50.
